2004-07-04  Gustavo J. A. M. Carneiro  <gustavo@users.sourceforge.net>

	* gtk/gtktreeview.override (_wrap_gtk_tree_store_new): Use
	g_object_newv to create instance, thus allowing subclassing
	without __gobject_init__.

	* gtk/gtkmodule.c (init_gtk): Register new warning category,
	GtkWarning.  Register a log handler for Gtk warnings that issues a
	python warning using GtkWarning category.

2004-07-04  John Ehresman  <jpe@wingide.com>

	* codegen/argtypes.py (GUniCharArg): Use the converter function
	pyg_pyobj_to_unichar_conv to parse gunichar parameters, instead of
	templated code.

	* pygtype.c (pyg_pyobj_to_unichar_conv): impl.

	* pygobject.h, gobjectmodule.c: Add pyg_pyobj_to_unichar_conv to list of
	exported functions.

2004-07-04  Gustavo J. A. M. Carneiro  <gustavo@users.sourceforge.net>

	* gtk/gdk.override (_wrap_gdk_colormap_query_color): Implement
	gdk.Colormap.query_color.

	* gtk/gdk.defs (query_color): Add gdk.Colormap.query_color.

	* gtk/gtktreeview.override (pygtk_set_search_equal_func_marshal):
	Column is integer, not PyGObject! :-/

2004-07-03  John Finlay  <finlay@moeraki.com>

	* gtk/gtk.defs
	* gtk/gtk-extrafuncs.defs I goofed in placing the GenericTreeModel
	methods. Now they should be in the right place.

	* gtk/gtktreeview.override Ignore gtk_tree_view_get_search_equal_func.

	* gtk/pygtktreemodel.c
	* gtk/pygtktreemodel.h
	* gtk/gtk.defs
	Add stamp to GenericTreeModel to use in detecting valid TreeIters.
	Add invalidate_iters() method to allow custom tree models to
	manage TreeIters when not persistent.
	Add iter_is_valid() method to allow apps to determine if a TreeIter
	for a custom tree model is valid.

2004-07-03  Ross Burton  <ross@burtonini.com>

	* gtk/gdk.defs:	Add gdk_pixbuf_new_subpixbuf.

2004-07-03  Gustavo J. A. M. Carneiro  <gustavo@users.sourceforge.net>

	* gtk/gtktreeview.override (_wrap_gtk_list_store_new): Construct
	object with g_object_newv, then call
	gtk_list_store_set_column_types().  Fixes #123037.