@@ -1,3 +1,7 @@
+2004-07-04  John Ehresman  <jpe@wingide.com>
+
+	* tests directory: unit tests
+
 2004-07-04  Gustavo J. A. M. Carneiro  <gustavo@users.sourceforge.net>
 
 	* gtk/gtktreeview.override (_wrap_gtk_tree_store_new): Use
